# ojs_updater

./: .gitignore  README.md  ojs_updater_settings.yml.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
ojs_updater/: commons.py  ojs_update.py  ojsinstance.py  settings.py  updater.py
tests/: conftest.py  test_commons.py  test_ojsinstance.py  test_update.py  test_updater.py
tests/mocks/journals/journal_that_needs_upgrade/: config.inc.php
tests/mocks/journals/journal_that_needs_upgrade/dbscripts/xml/: version.xml
tests/mocks/ojs_versions/missing_config/dbscripts/xml/: version.xml
tests/mocks/ojs_versions/missing_version_file/: config.inc.php
tests/mocks/ojs_versions/valid_version_folder_3_3_0_1/dbscripts/xml/: version.xml
