[metadata]
name = ojs_updater
version = 0.1.1
description = Simple script to update multiple ojs instances on the same system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ubffm/ojs_updater
author = UB Frankfurt a. M.
author_email = ublabs@ub.uni-frankfurt.de
license = MPL 2.0
platforms = linux
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.6
install_requires=
        packaging == 21.0
        PyYAML == 6.0.1 
        zc.lockfile == 2.0
        schema == 0.7.4

[options.entry_points]
console_scripts = 
    ojs_updater = ojs_updater.ojs_update:main
